# sgh

./: .gitignore  CMakeLists.txt  README.md
apprunner/: CMakeLists.txt  apprunner.cpp  apprunner.hpp
apprunner/include/: apprunner.hpp  apprunnerexport.hpp  iapprunner.hpp
configuration/: CMakeLists.txt  configuration.cpp  configuration.hpp
configuration/include/: iconfiguration.hpp
extypes/: CMakeLists.txt  str.cpp  strmap.cpp
extypes/include/: str.hpp  strmap.hpp
filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.hpp
filesystem/include/: filesystem.hpp  ifilesystem.hpp
host/: CMakeLists.txt  common.hpp  direction.cpp  direction.hpp  gamebasetile.cpp  gamebasetile.hpp  gamescene.cpp  gamescene.hpp  keymapping.cpp  keymapping.hpp  keyredefinitionmenu.cpp  keyredefinitionmenu.hpp  levelproperties.cpp  levelproperties.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  menuscene.cpp  menuscene.hpp  optionsmenu.cpp  optionsmenu.hpp  player.cpp  player.hpp  startlevelmenu.cpp  startlevelmenu.hpp  tile.cpp  tile.hpp  zoperprogramcontroller.cpp  zoperprogramcontroller.hpp
host/lib/board/: boardmodel.cpp  boardmodel.hpp  itilescontroller.hpp
host/lib/core/: appcontroller.cpp  appcontroller.hpp  appservice.hpp  classutils.hpp  compileconfig.hpp  config.cpp  config.hpp  configuration.cpp  configuration.hpp  convops.cpp  convops.hpp  data.cpp  data.hpp  driver.cpp  driver.hpp  eventmanager.cpp  eventmanager.hpp  exceptionmanager.cpp  exceptionmanager.hpp  exceptions.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  hostcontroller.cpp  hostcontroller.hpp  hosttask.hpp  input.cpp  input.hpp  inputcomponent.cpp  inputcomponent.hpp  log.cpp  log.hpp  main.cpp  memmanager.hpp  node.cpp  node.hpp  obj.cpp  obj.hpp  randomizer.cpp  (+20 more)
host/lib/core/events/: event.hpp  eventclient.cpp  eventclient.hpp  eventproxy.cpp  eventproxy.hpp  eventreceiver.cpp  eventreceiver.hpp  eventsender.cpp  eventsender.hpp  inputevent.hpp
host/lib/datap/: address.cpp  address.hpp  dataobject.hpp  dataparser.cpp  dataparser.hpp
host/lib/draw/: animationmanager.cpp  animationmanager.hpp  camera.hpp  coloranimation.cpp  coloranimation.hpp  hasname.hpp  ianimation.hpp  idrawable.hpp  inameddrawable.hpp  inodetree.hpp  iparentable.hpp  iscene.hpp  iscenecontroller.hpp  iscenenode.cpp  iscenenode.hpp  node.hpp  nodeshape.cpp  nodeshape.hpp  nodetext.cpp  nodetext.hpp  positionanimation.cpp  positionanimation.hpp  rendergroup.cpp  rendergroup.hpp  renderizable.cpp  renderizable.hpp  rendernode.cpp  rendernode.hpp  renderstates.cpp  renderstates.hpp  rendertarget.hpp  scene.cpp  scene.hpp  scenemanager.cpp  scenemanager.hpp  textgroup.cpp  textgroup.hpp  transformable.cpp  transformable.hpp  transformation.cpp  (+7 more)
host/lib/driv_impl/sfml/: wwindow_impl.cpp  wwindow_impl.hpp
host/lib/drivers/window/: wwindow.hpp
host/lib/include/: color.hpp  compconfig.hpp  iapp.hpp  key.hpp  rect.hpp  types.hpp  vector2d.hpp
host/lib/menu/: choosecontrol.cpp  choosecontrol.hpp  imenucontrol.hpp  menudescriptors.hpp  menumanager.cpp  menumanager.hpp  menustep.cpp  menustep.hpp  menutheme.cpp  menutheme.hpp  simplemenu.cpp  simplemenu.hpp
host/lib/util/: randomizer.cpp  randomizer.hpp  utilprovider.cpp  utilprovider.hpp
lib/: CMakeLists.txt
lib/core/: appcontroller.cpp  appcontroller.hpp  appservice.hpp  compileconfig.hpp  configuration.cpp  configuration.hpp  configurationloadcontroller.cpp  configurationloadcontroller.hpp  convops.cpp  convops.hpp  data.cpp  data.hpp  dataconversion.hpp  datamap.hpp  datavalue.cpp  datavalue.hpp  driver.cpp  driver.hpp  eventhandler.cpp  eventhandler.hpp  exceptionmanager.hpp  file.cpp  file.hpp  filepath.cpp  filepath.hpp  filesystem.cpp  filesystem.hpp  hostcontroller.cpp  hostcontroller.hpp  hosttask.hpp  input.cpp  input.hpp  inputreceiver.cpp  inputreceiver.hpp  log.cpp  log.hpp  main.cpp  memmanager.cpp  nodeupdater.hpp  obj.cpp  (+26 more)
lib/draw/: animatable.cpp  animatable.hpp  animation.hpp  animationmanager.cpp  animationmanager.hpp  animations.hpp  camera.cpp  camera.hpp  coloranimation.cpp  coloranimation.hpp  font.cpp  font.hpp  globalrendernode.cpp  globalrendernode.hpp  hasname.hpp  ianimation.cpp  ianimation.hpp  idrawable.hpp  iparentable.hpp  node.cpp  (+34 more)
loader/: CMakeLists.txt  loadedInstance.cpp  loadedInstance.hpp  loader.cpp
loader/include/: ibasicinterface.hpp  imodule.hpp  loader.hpp  loaderexport.hpp
logger/: CMakeLists.txt  logger.cpp
logger/include/: logger.hpp  loggerexport.hpp
moduler/: CMakeLists.txt  loadedInstance.cpp  loadedInstance.hpp  moduleconnection.cpp  moduleconnection.hpp  modulecontext.cpp  modulecontext.hpp  modulehandle.hpp  moduler.cpp  modulerprivate.cpp  modulerprivate.hpp
moduler/include/: ibasicinterface.hpp  imodule.hpp  imodulecontext.hpp  imoduleexport.hpp  imodulerstarter.hpp  moduler.hpp  modulerexport.hpp
sghcommon/: CMakeLists.txt  datavalue.cpp  strutils.cpp
sghcommon/include/: datamap.hpp  datavalue.hpp  rect.hpp  strutils.hpp  types.hpp  vector2d.hpp
sghost/: CMakeLists.txt  hostmodule.cpp  hostmodule.hpp  main.cpp  memleakdetector.cpp
vortex/: CMakeLists.txt  app.cpp  assert.cpp  common_def_priv.hpp  config_group.cpp  file_map.cpp  file_mapped.cpp  logger.cpp  memleakdetector.cpp  parameters.cpp  parameters.hpp  serializable_types.cpp  serialization.cpp  serialization_buffer.cpp  serialization_object.cpp  str.cpp  vappinternal.cpp  vappinternal.hpp  vapplication.cpp  videooptions.cpp  vortex.cpp
vortex/include/: app.hpp  assert.hpp  common_def.hpp  common_patterns.hpp  comp_config.hpp  config_group.hpp  file_map.hpp  file_mapped.hpp  iapplication.hpp  iserializable.hpp  logger.hpp  memleakdetector.hpp  nocopy.hpp  properties.hpp  serializable_types.hpp  serialization.hpp  serialization_buffer.hpp  serialization_object.hpp  singleton.hpp  str.hpp  types.hpp  vapplication.hpp  vector2d.hpp  videooptions.hpp  vortex.hpp
vrtx_app1/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
vrtxbackend/: CMakeLists.txt
vrtxbackend/include/: common_def.hpp  comp_config.hpp  singleton.hpp  vortex.hpp
(+57 files in other folders)
