file (GLOB LOADER_SOURCES "*.cpp")
file (GLOB LOADER_HEADERS "*.hpp")
 
file (GLOB LOADER_INCLUDES "include/*.hpp")

set (CURRENT_TARGET loader) 
source_group("Sources" FILES ${LOADER_SOURCES})
source_group("Headers" FILES ${LOADER_HEADERS})
source_group("Includes" FILES ${LOADER_INCLUDES})
set(CMAKE_DEBUG_POSTFIX  "d") 
add_definitions(-DLOADER_EXPORTS) 

include_directories ("${PROJECT_SOURCE_DIR}/")
add_library(${CURRENT_TARGET} SHARED ${LOADER_SOURCES} ${LOADER_HEADERS} ${LOADER_INCLUDES})
target_link_libraries (${CURRENT_TARGET} moduler)
target_link_libraries (${CURRENT_TARGET} logger)

set(LOADER_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

set_target_properties(${CURRENT_TARGET}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${LOADER_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${LOADER_OUTPUT_DIRECTORY}"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${LOADER_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${LOADER_OUTPUT_DIRECTORY}"
)

install (TARGETS loader RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin)