file (GLOB LOGGER_SOURCES "*.cpp")
file (GLOB LOGGER_HEADERS "*.hpp")
 
file (GLOB LOGGER_INCLUDES "include/*.hpp")

set (CURRENT_TARGET logger) 
source_group("Sources" FILES ${LOGGER_SOURCES})
source_group("Headers" FILES ${LOGGER_HEADERS})
source_group("Includes" FILES ${LOGGER_INCLUDES})
set(CMAKE_DEBUG_POSTFIX  "d") 
add_definitions(-DLOGGER_EXPORTS) 

add_library(${CURRENT_TARGET} SHARED ${LOGGER_SOURCES} ${LOGGER_HEADERS} ${LOGGER_INCLUDES})

set(LOGGER_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

set_target_properties(${CURRENT_TARGET}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${LOGGER_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${LOGGER_OUTPUT_DIRECTORY}"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${LOGGER_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${LOGGER_OUTPUT_DIRECTORY}"
)

install (TARGETS ${CURRENT_TARGET} RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin)
