file (GLOB MODULER_SOURCES "*.cpp")
file (GLOB MODULER_HEADERS "*.hpp")
 
file (GLOB MODULER_INCLUDES "include/*.hpp")

set (CURRENT_TARGET moduler) 
source_group("Sources" FILES ${MODULER_SOURCES})
source_group("Headers" FILES ${MODULER_HEADERS})
source_group("Includes" FILES ${MODULER_INCLUDES})
set(CMAKE_DEBUG_POSTFIX  "d") 
add_definitions(-DMODULER_EXPORTS) 

add_library(${CURRENT_TARGET} SHARED ${MODULER_SOURCES} ${MODULER_HEADERS} ${MODULER_INCLUDES})

set(SGH_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

set_target_properties(${CURRENT_TARGET}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${SGH_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${SGH_OUTPUT_DIRECTORY}"
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${SGH_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${SGH_OUTPUT_DIRECTORY}"
)


install (TARGETS moduler RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin)